# os-assignments

./: .gitignore
AniShell/: CMakeLists.txt  README.md  anishell  globals.h  main.c
AniShell/commands/: cd.c  cd.h  echo.c  echo.h  execvp.c  execvp.h  history.c  history.h  ls.c  ls.h  nightswatch.c  nightswatch.h  pinfo.c  pinfo.h  pwd.c  pwd.h  syscom.c  syscom.h
AniShell/processor/: parser.c  parser.h  pipeline.c  pipeline.h  prompt.c  prompt.h  signal.c  signal.h  tokenizer.c  tokenizer.h
AniShell/utils/: io.c  io.h  joblist.c  joblist.h  string.c  string.h  strmat.c  strmat.h  sysinfo.c  sysinfo.h  terminate.c  terminate.h
MultiProcessing/: CMakeLists.txt
MultiProcessing/q1/: README.md  functions.c  functions.h  main.c  normal.c  normal.h  processes.c  processes.h  threads.c  threads.h
MultiProcessing/q2/: README.md  company.c  company.h  functions.c  functions.h  main.c  student.c  student.h  zone.c  zone.h
MultiProcessing/q3/: README.md  distrib.c  distrib.h  functions.c  functions.h  main.c  musician.c  musician.h  stage.c  stage.h  tests.txt
NetworkTransfer/: CMakeLists.txt  client  client.c  server  server.c
SysCalls/: Q1  Q1.c  Q2  Q2.c  README.md  smallfile.txt
UnixTweaks/: Makefile  REPORT.md  busywait.c  defs.h  main.c  proc.c  proc.h  ps.c  schedulers.c  schedulers.h  setPriority.c  syscall.c  syscall.h  sysproc.c  timex.c  trap.c  user.h  usys.S
UnixTweaks/plots/: plotdata_1.csv  plotdata_2.csv
